Make sure init() is called before Quill can be used at all. Handle dynamically added Panels when loading Panel settings from storage. Cut off long Panel titles before the close button.

--- a/src/quill.css
+++ b/src/quill.css
@@ -37,6 +37,10 @@
     cursor: move;
     justify-content: space-between;
     align-items: center;
+    gap: var(--quill-panel-padding-size);
+}
+.quill .quill-panel-title-bar > :nth-child(1) {
+    overflow: hidden;
 }
 .quill .quill-close-button {
     font-size: 1.5em;
